Fin section 1 et ajout animation nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-    <nav>
+    <nav id="nav">
         <img src="assets/img/logo.png" alt="Logo">
         <div>
             <span><a href="/lookbook.html">LookBook</a></span>
@@ -26,7 +26,7 @@
             </div>
         </div>
     </nav>
-    <section id="lookBooks">
+    <section id="patterns">
         <div class="text">
             <h1>
                 Les <br/>
@@ -41,6 +41,18 @@
         </div>
     </section>
     <div class="background-anim"></div>
+    <a href="#lookBooks" class="downArrow">
+        <img src="assets/img/downArrow.png" alt="Arrow Down">
+    </a>
+    <section id="lookBooks">
+        <div class="text">
+            <h2>
+                Look <br/>
+                Books
+            </h2>
+            <a href="/"></a>
+        </div>
+    </section>
 </div>
 </body>
 <script src="assets/js/main.js"></script>
