ajout gitignore section 2 et 3 finis

--- a/index.html
+++ b/index.html
@@ -50,7 +50,41 @@
                 Look <br/>
                 Books
             </h2>
-            <a href="/"></a>
+            <a href="/lookbook.html">
+                Voir plus
+            </a>
+        </div>
+        <div class="scroll">
+            <img src="assets/img/lookbook1.png" alt="Illustration">
+            <div>
+                <img src="assets/img/lookbook2-1.png" alt="Illustration">
+                <img src="assets/img/lookbook2-2.png" alt="Illustration">
+            </div>
+            <img src="assets/img/lookbook3.png" alt="Illustration">
+        </div>
+    </section>
+    <div class="panoramiqueLink">
+        <a href="#panoramique">
+            <img src="assets/img/fullDownArrow.png" alt="Full Down Arrow">
+            PANORAMIQUES
+        </a>
+    </div>
+    <section id="panoramique">
+        <div class="scroll">
+            <div>
+                <img src="assets/img/panoramique2-1.png" alt="Illustration">
+                <img src="assets/img/panoramique2-2.png" alt="Illustration">
+            </div>
+            <img src="assets/img/panoramique1.png" alt="Illustration">
+        </div>
+        <div class="text">
+            <h2>
+                Panoramiques
+            </h2>
+            <p>
+                « Graphiquement votre » <br/>
+                <b>par Georgia Klein</b>
+            </p>
         </div>
     </section>
 </div>
