Fin homepage -v desktop

--- a/index.html
+++ b/index.html
@@ -87,7 +87,191 @@
             </p>
         </div>
     </section>
+    <section id="designer">
+        <h2>
+            Histoire de Designer
+        </h2>
+        <div class="portraits">
+            <figure class="presentation">
+                <img src="assets/img/portraits/klein.png" alt="portrait">
+                <figcaption>
+                    <b>
+                        Georgia Klein
+                    </b>
+                    <span>
+                        Lorem ipsum dolor sit amet, consectetur
+                    </span>
+                    <span class="indent-1">
+                        adipisicing elit, sed do eiusmod tempor
+                    </span>
+                    <span class="indent-2">
+                        incididunt ut labore et dolore magna aliqua.
+                    </span>
+                </figcaption>
+            </figure>
+            <figure class="presentation">
+                <img src="assets/img/portraits/gulio.png" alt="portrait">
+                <figcaption>
+                    <b>
+                        Gulio
+                    </b>
+                    <span>
+                        Lorem ipsum dolor sit amet, consectetur
+                    </span>
+                    <span class="indent-1">
+                        adipisicing elit, sed do eiusmod tempor
+                    </span>
+                    <span class="indent-2">
+                        incididunt ut labore et dolore magna aliqua.
+                    </span>
+                </figcaption>
+            </figure>
+            <figure class="presentation">
+                <img src="assets/img/portraits/rosenbrg.png" alt="portrait">
+                <figcaption>
+                    <b>
+                        Colette Rosenbrg
+                    </b>
+                    <span>
+                        Lorem ipsum dolor sit amet, consectetur
+                    </span>
+                    <span class="indent-1">
+                        adipisicing elit, sed do eiusmod tempor
+                    </span>
+                    <span class="indent-2">
+                        incididunt ut labore et dolore magna aliqua.
+                    </span>
+                </figcaption>
+            </figure>
+            <figure class="presentation">
+                <img src="assets/img/portraits/dominique.png" alt="portrait">
+                <figcaption>
+                    <b>
+                        Stephan Dominique
+                    </b>
+                    <span>
+                        Lorem ipsum dolor sit amet, consectetur
+                    </span>
+                    <span class="indent-1">
+                        adipisicing elit, sed do eiusmod tempor
+                    </span>
+                    <span class="indent-2">
+                        incididunt ut labore et dolore magna aliqua.
+                    </span>
+                </figcaption>
+            </figure>
+        </div>
+    </section>
+    <section id="history">
+        <div class="left text">
+            <h2>
+                Histoire <br/>
+                d'apprendre
+            </h2>
+            <p>
+                Le lorem ipsum est, en<br/>
+                imprimerie, une suite de<br/>
+                mots sans signification<br/>
+                utilisée à titre provisoire<br/>
+                pour calibrer une mise en<br/>
+                page, le texte définitif<br/>
+                venant remplacer le<br/>
+                faux-texte dès qu'il est
+            </p>
+            <a href="know-how.html">
+                Voir plus
+            </a>
+        </div>
+        <div class="right">
+            <p>
+                Le lorem ipsum est, en
+                imprimerie, une suite de mots
+                sans signification utilisée à titre
+                provisoire pour calibrer une mise
+                en page, le texte définitif venant
+                remplacer le faux-texte dès qu'il
+                est prêt ou que la mise en page
+                est achevée. Généralement, on
+                utilise un texte en faux latin, le
+                Lorem ipsum ou Lipsum
+            </p>
+        </div>
+    </section>
 </div>
+<footer>
+    <div class="follow">
+        <h2>
+            Suivez-nous
+        </h2>
+        <div class="social">
+            <img src="assets/img/socialNetwork/facebook.png" alt="Facebook">
+            <img src="assets/img/socialNetwork/twitter.png" alt="Twitter">
+            <img src="assets/img/socialNetwork/linkedin.png" alt="Linkedin">
+            <img src="assets/img/socialNetwork/youtube.png" alt="Youtube">
+            <img src="assets/img/socialNetwork/phone.png" alt="Phone number">
+        </div>
+        <div class="copyright">
+            © 2020 CURLPAPER.  Touts droits réservés.
+        </div>
+    </div>
+    <div class="us">
+        <h2>
+            Qui sommmes-nous
+        </h2>
+        <img src="assets/img/logoFooter.png" alt="Logo société">
+    </div>
+    <div class="info">
+        <div class="services">
+            <h2>
+                Services
+            </h2>
+            <ul>
+                <li>
+                    <a href="">
+                        Prestataires
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Artisans
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Fournisseurs
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="resources">
+            <h2>
+                Ressources
+            </h2>
+            <ul>
+                <li>
+                    <a href="">
+                        News
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Blog
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Videos
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        FAQs
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </body>
 <script src="assets/js/main.js"></script>
 </html>
