--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
 <div class="container">
     <nav id="nav">
-        <img src="assets/img/logo.png" alt="Logo">
+        <img src="assets/img/header/logo.png" alt="Logo">
         <div>
-            <span><a href="/lookbook.html">LookBook</a></span>
-            <span><a href="/panoramique.html">Panoramique</a></span>
-            <span><a href="/designer.html">Designer</a></span>
-            <span><a href="/know-how.html">Savoir-faire</a></span>
-            <span><a href="/contact.html">Contact</a></span>
+            <span><a href="lookbook.html">LookBook</a></span>
+            <span><a href="panoramique.html">Panoramique</a></span>
+            <span><a href="designer.html">Designer</a></span>
+            <span><a href="know-how.html">Savoir-faire</a></span>
+            <span><a href="contact.html">Contact</a></span>
             <div class="searchbar">
                 <label for="search">
-                    <img src="assets/img/magnifier.png" alt="Magnifier">
+                    <img src="assets/img/header/magnifier.png" alt="Magnifier">
                     <input id="search" type="text">
                 </label>
             </div>
@@ -35,14 +35,14 @@
             <h2>
                 Voyage au-delà des murs
             </h2>
-            <a href="/lookbook.html">
+            <a href="lookbook.html">
                 EXPLOREZ
             </a>
         </div>
     </section>
     <div class="background-anim"></div>
     <a href="#lookBooks" class="downArrow">
-        <img src="assets/img/downArrow.png" alt="Arrow Down">
+        <img src="assets/img/homepage/downArrow.png" alt="Arrow Down">
     </a>
     <section id="lookBooks">
         <div class="text">
@@ -50,32 +50,32 @@
                 Look <br/>
                 Books
             </h2>
-            <a href="/lookbook.html">
+            <a href="lookbook.html">
                 Voir plus
             </a>
         </div>
         <div class="scroll">
-            <img src="assets/img/lookbook1.png" alt="Illustration">
+            <img src="assets/img/homepage/lookbook1.png" alt="Illustration">
             <div>
-                <img src="assets/img/lookbook2-1.png" alt="Illustration">
-                <img src="assets/img/lookbook2-2.png" alt="Illustration">
+                <img src="assets/img/homepage/lookbook2-1.png" alt="Illustration">
+                <img src="assets/img/homepage/lookbook2-2.png" alt="Illustration">
             </div>
-            <img src="assets/img/lookbook3.png" alt="Illustration">
+            <img src="assets/img/homepage/lookbook3.png" alt="Illustration">
         </div>
     </section>
     <div class="panoramiqueLink">
         <a href="#panoramique">
-            <img src="assets/img/fullDownArrow.png" alt="Full Down Arrow">
+            <img src="assets/img/homepage/fullDownArrow.png" alt="Full Down Arrow">
             PANORAMIQUES
         </a>
     </div>
     <section id="panoramique">
         <div class="scroll">
             <div>
-                <img src="assets/img/panoramique2-1.png" alt="Illustration">
-                <img src="assets/img/panoramique2-2.png" alt="Illustration">
+                <img src="assets/img/homepage/panoramique2-1.png" alt="Illustration">
+                <img src="assets/img/homepage/panoramique2-2.png" alt="Illustration">
             </div>
-            <img src="assets/img/panoramique1.png" alt="Illustration">
+            <img src="assets/img/homepage/panoramique1.png" alt="Illustration">
         </div>
         <div class="text">
             <h2>
@@ -204,21 +204,23 @@
             Suivez-nous
         </h2>
         <div class="social">
-            <img src="assets/img/socialNetwork/facebook.png" alt="Facebook">
-            <img src="assets/img/socialNetwork/twitter.png" alt="Twitter">
-            <img src="assets/img/socialNetwork/linkedin.png" alt="Linkedin">
-            <img src="assets/img/socialNetwork/youtube.png" alt="Youtube">
-            <img src="assets/img/socialNetwork/phone.png" alt="Phone number">
+            <img src="assets/img/footer/socialNetwork/facebook.png" alt="Facebook">
+            <img src="assets/img/footer/socialNetwork/twitter.png" alt="Twitter">
+            <img src="assets/img/footer/socialNetwork/linkedin.png" alt="Linkedin">
+            <img src="assets/img/footer/socialNetwork/youtube.png" alt="Youtube">
+            <img src="assets/img/footer/socialNetwork/phone.png" alt="Phone number">
         </div>
         <div class="copyright">
-            © 2020 CURLPAPER.  Touts droits réservés.
+            © 2020 CURLPAPER. Touts droits réservés.
         </div>
     </div>
     <div class="us">
         <h2>
             Qui sommmes-nous
         </h2>
-        <img src="assets/img/logoFooter.png" alt="Logo société">
+        <a href="#">
+            <img src="assets/img/footer/logoFooter.png" alt="Logo société">
+        </a>
     </div>
     <div class="info">
         <div class="services">
