--- a/panoramique.html
+++ b/panoramique.html
@@ -1,10 +1,133 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link type="text/css" rel="stylesheet" href="assets/css/main.css">
+    <title>LookBook</title>
 </head>
-<body>
-
+<body id="panoramiquePage">
+<nav id="nav">
+    <img src="assets/img/header/logo.png" alt="Logo">
+    <div>
+        <span><a href="lookbook.html">LookBook</a></span>
+        <span><a href="panoramique.html">Panoramique</a></span>
+        <span><a href="designer.html">Designer</a></span>
+        <span><a href="know-how.html">Savoir-faire</a></span>
+        <span><a href="contact.html">Contact</a></span>
+        <div class="searchbar">
+            <label for="search">
+                <img src="assets/img/header/magnifier.png" alt="Magnifier">
+                <input id="search" type="text">
+            </label>
+        </div>
+    </div>
+</nav>
+<section id="panoramique">
+    <img src="assets/img/homepage/lookbook1.png" height="400px" alt="Illustration">
+    <div class="text">
+        <h2>
+            Look Books
+        </h2>
+        <h1>
+            Panoramique
+        </h1>
+        <h2 class="under-title">
+            « Graphiquement votre »<br/>
+            <b>par Georgia Klein</b>
+        </h2>
+        <h2>
+            Histoire de Designer
+        </h2>
+        <div class="link">
+            <a href="">Voir plus de Look Books</a>
+            <a href="">4 modèles en plus</a>
+        </div>
+    </div>
+    <div class="image">
+        <img src="assets/img/panoramique/rightPannel.png" height="400px" alt="Illustration">
+        <a href="designer.html">
+            <img src="assets/img/lookBook/arrowRight.png" alt="Arrow Right">
+        </a>
+    </div>
+</section>
+<footer>
+    <div class="follow">
+        <h2>
+            Suivez-nous
+        </h2>
+        <div class="social">
+            <img src="assets/img/footer/socialNetwork/facebook.png" alt="Facebook">
+            <img src="assets/img/footer/socialNetwork/twitter.png" alt="Twitter">
+            <img src="assets/img/footer/socialNetwork/linkedin.png" alt="Linkedin">
+            <img src="assets/img/footer/socialNetwork/youtube.png" alt="Youtube">
+            <img src="assets/img/footer/socialNetwork/phone.png" alt="Phone number">
+        </div>
+        <div class="copyright">
+            © 2020 CURLPAPER. Touts droits réservés.
+        </div>
+    </div>
+    <div class="us">
+        <h2>
+            Qui sommmes-nous
+        </h2>
+        <a href="#">
+            <img src="assets/img/footer/logoFooter.png" alt="Logo société">
+        </a>
+    </div>
+    <div class="info">
+        <div class="services">
+            <h2>
+                Services
+            </h2>
+            <ul>
+                <li>
+                    <a href="">
+                        Prestataires
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Artisans
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Fournisseurs
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="resources">
+            <h2>
+                Ressources
+            </h2>
+            <ul>
+                <li>
+                    <a href="">
+                        News
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Blog
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Videos
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        FAQs
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
