Page know-how.html finis début page contact.html

--- a/know-how.html
+++ b/know-how.html
@@ -28,9 +28,28 @@
 
 <section id="know-how">
     <div class="text">
-
+        Le lorem ipsum est, en imprimerie, une suite
+        de mots sans signification utilisée à titre
+        provisoire pour calibrer une mise en page,
+        le texte définitif venant remplacer le faux-
+        texte dès qu'il est prêt ou que la mise en
+        page est ache@vée. Généralement, on utilise
+        un texte en faux latin, le Lorem ipsum ou Lipsum
     </div>
-    <div class="right-sect"></div>ion
+    <div class="right-sect">
+        <div class="text">
+            <h2>
+                Changer de LookBooks
+            </h2>
+            <ul>
+                <li>Graphique</li>
+                <li>Floral</li>
+                <li>Illustré</li>
+                <li>Digital</li>
+            </ul>
+        </div>
+        <img src="assets/img/know-how/background-right.png" height="400px" alt="Pannel Right">
+    </div>
 </section>
 
 <footer>
