update homepage /  contact

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                 « Graphiquement votre » <br/>
                 <b>par Georgia Klein</b>
             </p>
+            <a href="panoramique.html">
+                Voir plus
+            </a>
         </div>
     </section>
     <section id="designer">
