Page know-how.html finis début page contact.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 <div class="container">
     <nav id="nav">
-        <img src="assets/img/header/logo.png" alt="Logo">
+        <a href="index.html">
+            <img src="assets/img/header/logo.png" alt="Logo">
+        </a>
         <div>
             <span><a href="lookbook.html">LookBook</a></span>
             <span><a href="panoramique.html">Panoramique</a></span>
