Correction Logo avec lien Homepage

--- a/designer.html
+++ b/designer.html
@@ -10,7 +10,9 @@
 </head>
 <body id="designerPage">
 <nav id="nav">
-    <img src="assets/img/header/logo.png" alt="Logo">
+    <a href="index.html">
+        <img src="assets/img/header/logo.png" alt="Logo">
+    </a>
     <div>
         <span><a href="lookbook.html">LookBook</a></span>
         <span><a href="panoramique.html">Panoramique</a></span>
@@ -33,7 +35,7 @@
             <img src="assets/img/designer/portrait.png" alt="Portrait">
             <figcaption>
                 <h1>
-                   Georgia Klein
+                    Georgia Klein
                 </h1>
                 <h2>
                     « travers l’objectif »
