--- a/lookbook.html
+++ b/lookbook.html
@@ -10,7 +10,9 @@
 </head>
 <body id="lookBooksPage">
 <nav id="nav">
-    <img src="assets/img/header/logo.png" alt="Logo">
+    <a href="index.html">
+        <img src="assets/img/header/logo.png" alt="Logo">
+    </a>
     <div>
         <span><a href="lookbook.html">LookBook</a></span>
         <span><a href="panoramique.html">Panoramique</a></span>
