--- a/designer.html
+++ b/designer.html
@@ -11,8 +11,7 @@
 <body id="designerPage">
 <nav id="nav">
     <a href="index.html">
-        <img src="assets/img/header/logo.png" alt="Logo">
-    </a>
+        <img src="assets/img/header/logo.png" alt="Logo"></a>
     <div>
         <span><a href="lookbook.html">LookBook</a></span>
         <span><a href="panoramique.html">Panoramique</a></span>
@@ -27,12 +26,14 @@
         </div>
     </div>
 </nav>
-
+<div id="fog">
+    <img class="imgMax" src="assets/img/know-how/background-right.png" alt="Full Screen Image">
+</div>
 <section id="designer">
-    <img src="assets/img/designer/leftPannel.png" height="400px" alt="Left Pannel">
+    <img class="imgZoom" src="assets/img/designer/leftPannel.png" height="400px" alt="Left Pannel">
     <div class="text">
         <figure>
-            <img src="assets/img/designer/portrait.png" alt="Portrait">
+            <img class="imgZoom" src="assets/img/designer/portrait.png" alt="Portrait">
             <figcaption>
                 <h1>
                     Georgia Klein
@@ -48,9 +49,9 @@
         </div>
     </div>
     <div class="image">
-        <img src="assets/img/designer/pannel-right.JPG" height="400px" alt="Right Pannel">
+        <img class="imgZoom" src="assets/img/designer/pannel-right.JPG" height="400px" alt="Right Pannel">
         <a href="know-how.html">
-            <img src="assets/img/lookBook/arrowRight.png" alt="Arrow Right">
+            <img class="imgZoom" src="assets/img/lookBook/arrowRight.png" alt="Arrow Right">
         </a>
     </div>
 </section>
