--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <div class="container">
     <nav id="nav">
         <a href="index.html">
-            <img src="assets/img/header/logo.png" alt="Logo">
-        </a>
+            <img src="assets/img/header/logo.png" alt="Logo"></a>
         <div>
             <span><a href="lookbook.html">LookBook</a></span>
             <span><a href="panoramique.html">Panoramique</a></span>
@@ -28,6 +27,9 @@
             </div>
         </div>
     </nav>
+    <div id="fog">
+        <img class="imgMax" src="assets/img/know-how/background-right.png" alt="Full Screen Image">
+    </div>
     <section id="patterns">
         <div class="text">
             <h1>
@@ -57,12 +59,12 @@
             </a>
         </div>
         <div class="scroll">
-            <img src="assets/img/homepage/lookbook1.png" alt="Illustration">
+            <img class="imgZoom" src="assets/img/homepage/lookbook1.png" alt="Illustration">
             <div>
-                <img src="assets/img/homepage/lookbook2-1.png" alt="Illustration">
-                <img src="assets/img/homepage/lookbook2-2.png" alt="Illustration">
+                <img class="imgZoom" src="assets/img/homepage/lookbook2-1.png" alt="Illustration">
+                <img class="imgZoom" src="assets/img/homepage/lookbook2-2.png" alt="Illustration">
             </div>
-            <img src="assets/img/homepage/lookbook3.png" alt="Illustration">
+            <img class="imgZoom" src="assets/img/homepage/lookbook3.png" alt="Illustration">
         </div>
     </section>
     <div class="panoramiqueLink">
@@ -74,10 +76,10 @@
     <section id="panoramique">
         <div class="scroll">
             <div>
-                <img src="assets/img/homepage/panoramique2-1.png" alt="Illustration">
-                <img src="assets/img/homepage/panoramique2-2.png" alt="Illustration">
+                <img class="imgZoom" src="assets/img/homepage/panoramique2-1.png" alt="Illustration">
+                <img class="imgZoom" src="assets/img/homepage/panoramique2-2.png" alt="Illustration">
             </div>
-            <img src="assets/img/homepage/panoramique1.png" alt="Illustration">
+            <img class="imgZoom" src="assets/img/homepage/panoramique1.png" alt="Illustration">
         </div>
         <div class="text">
             <h2>
@@ -98,7 +100,7 @@
         </h2>
         <div class="portraits">
             <figure class="presentation">
-                <img src="assets/img/portraits/klein.png" alt="portrait">
+                <img class="imgZoom" src="assets/img/portraits/klein.png" alt="portrait">
                 <figcaption>
                     <b>
                         Georgia Klein
@@ -115,7 +117,7 @@
                 </figcaption>
             </figure>
             <figure class="presentation">
-                <img src="assets/img/portraits/gulio.png" alt="portrait">
+                <img class="imgZoom" src="assets/img/portraits/gulio.png" alt="portrait">
                 <figcaption>
                     <b>
                         Gulio
@@ -132,7 +134,7 @@
                 </figcaption>
             </figure>
             <figure class="presentation">
-                <img src="assets/img/portraits/rosenbrg.png" alt="portrait">
+                <img class="imgZoom" src="assets/img/portraits/rosenbrg.png" alt="portrait">
                 <figcaption>
                     <b>
                         Colette Rosenbrg
@@ -149,7 +151,7 @@
                 </figcaption>
             </figure>
             <figure class="presentation">
-                <img src="assets/img/portraits/dominique.png" alt="portrait">
+                <img class="imgZoom" src="assets/img/portraits/dominique.png" alt="portrait">
                 <figcaption>
                     <b>
                         Stephan Dominique
