--- a/know-how.html
+++ b/know-how.html
@@ -27,7 +27,9 @@
         </div>
     </div>
 </nav>
-
+<div id="fog">
+    <img class="imgMax" src="assets/img/know-how/background-right.png" alt="Full Screen Image">
+</div>
 <section id="know-how">
     <div class="text">
         Le lorem ipsum est, en imprimerie, une suite
@@ -50,7 +52,7 @@
                 <li>Digital</li>
             </ul>
         </div>
-        <img src="assets/img/know-how/background-right.png" height="400px" alt="Pannel Right">
+        <img class="imgZoom" src="assets/img/know-how/background-right.png" height="400px" alt="Pannel Right">
     </div>
 </section>
 
