--- a/lookbook.html
+++ b/lookbook.html
@@ -11,8 +11,7 @@
 <body id="lookBooksPage">
 <nav id="nav">
     <a href="index.html">
-        <img src="assets/img/header/logo.png" alt="Logo">
-    </a>
+        <img src="assets/img/header/logo.png" alt="Logo"></a>
     <div>
         <span><a href="lookbook.html">LookBook</a></span>
         <span><a href="panoramique.html">Panoramique</a></span>
@@ -27,6 +26,9 @@
         </div>
     </div>
 </nav>
+<div id="fog">
+    <img class="imgMax" src="assets/img/know-how/background-right.png" alt="Full Screen Image">
+</div>
 <section id="lookBooks">
     <div class="text">
         <h1>
@@ -47,9 +49,9 @@
         </div>
     </div>
     <div class="image">
-        <img src="assets/img/lookBook/lookBookPresentation.png" alt="LookBooks">
+        <img class="imgZoom" src="assets/img/lookBook/lookBookPresentation.png" alt="LookBooks">
         <a href="panoramique.html">
-            <img src="assets/img/lookBook/arrowRight.png" alt="Arrow Right">
+            <img class="imgZoom" src="assets/img/lookBook/arrowRight.png" alt="Arrow Right">
         </a>
     </div>
 </section>
