--- a/panoramique.html
+++ b/panoramique.html
@@ -11,8 +11,7 @@
 <body id="panoramiquePage">
 <nav id="nav">
     <a href="index.html">
-        <img src="assets/img/header/logo.png" alt="Logo">
-    </a>
+        <img src="assets/img/header/logo.png" alt="Logo"></a>
     <div>
         <span><a href="lookbook.html">LookBook</a></span>
         <span><a href="panoramique.html">Panoramique</a></span>
@@ -27,8 +26,11 @@
         </div>
     </div>
 </nav>
+<div id="fog">
+    <img class="imgMax" src="assets/img/know-how/background-right.png" alt="Full Screen Image">
+</div>
 <section id="panoramique">
-    <img src="assets/img/homepage/lookbook1.png" height="400px" alt="Illustration">
+    <img class="imgZoom" src="assets/img/homepage/lookbook1.png" height="400px" alt="Illustration">
     <div class="text">
         <h2>
             Look Books
@@ -49,9 +51,9 @@
         </div>
     </div>
     <div class="image">
-        <img src="assets/img/panoramique/rightPannel.png" height="400px" alt="Illustration">
+        <img class="imgZoom" src="assets/img/panoramique/rightPannel.png" height="400px" alt="Illustration">
         <a href="designer.html">
-            <img src="assets/img/lookBook/arrowRight.png" alt="Arrow Right">
+            <img class="imgZoom" src="assets/img/lookBook/arrowRight.png" alt="Arrow Right">
         </a>
     </div>
 </section>
@@ -132,4 +134,5 @@
     </div>
 </footer>
 </body>
+<script src="assets/js/main.js"></script>
 </html>
