last modif css resposif + ajustement reset css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="assets/css/main.css">
     <title>Homepage</title>
 </head>
-<body>
+<body id="homepage">
 <div class="container">
     <nav id="nav">
         <a href="index.html">
